--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==1.2.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1.7
 django-allauth==0.52.0
+django-crispy-forms==2.0
 django-summernote==0.8.20.0
 oauthlib==3.2.2
 postgres==4.0
